adding set get survey title
